spacing adjusted, selected field border fixed

--- a/src/assets/css/website/_signin.scss
+++ b/src/assets/css/website/_signin.scss
@@ -132,7 +132,7 @@
 .credintials-content .form-wrap input {
   height: 48px;
   font-size: 0.875rem;
-  border: 1px solid #969EAC;
+  border: 1px solid $gray;
   border-radius: 4px;
   padding: 0 20px;
   color: $gray;
@@ -155,6 +155,10 @@
   margin: 0 0 31px;
 }
 
+input:focus{
+  outline: 0px;
+  border: 1px solid $gray;
+}
 span.forgot-pass {
   font-size: 0.875rem;
   color: $purple;
@@ -171,8 +175,7 @@ span.forgot-pass {
   cursor: pointer;
   border: 0;
   border-radius: 4px;
-  margin-bottom: 31px;
-}
+  }
 .credintials-content .form-wrap button:hover {
   color: $white;
 }
@@ -202,7 +205,7 @@ span.forgot-pass {
   padding-left: 80px;
 }
 
-.credintials-content p > .loginPage-end-element {
+.credintials-content p > .auth-end-element {
   color: $darkGray;
   line-height: 1.25rem;
 }
